# MIPT-CompTech-2ndCourse

./: README.md  iphone.mobileconfig
task1/: a.out  main.c  mydef.h
task3/: CMakeLists.txt  README.md
task3/include/: config.h  fifo.h  message_queue.h  shared_mem.h  utils.h
task3/src/: fifo.c  main.c  message_queue.c  shared_mem.c  utils.c
task4/: CMakeLists.txt  README.md  debug_config.cmake
task4/include/: config.h
task4/src/: integral.c  main.c
task4/test/: CMakeLists.txt  test_integral.c
